force-app/main/default/objects/DI_Idea_Exchange_Daily_Digest__c/DI_Idea_Exchange_Daily_Digest__c.object-meta.xml
<CustomObject>
    <description>Contains list of users who are subscribed for daily email digest for newly created Idea for the day.</description>
    <label>Idea Exchange Daily Digest</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>SL No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Idea Exchange Daily Digests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>