force-app/main/default/objects/DI_Idea_Exchange_Daily_Digest__c/fields/DI_New_Theme_Alert__c.field-meta.xml
<CustomField>
    <fullName>DI_New_Theme_Alert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If user subscribed for new theme alert checkbox would be true else would be unchecked.</description>
    <inlineHelpText>If user subscribed for new theme alert checkbox would be true else would be unchecked.</inlineHelpText>
    <label>New Theme Alert</label>
    <type>Checkbox</type>
</CustomField>