force-app/main/default/objects/DI_Idea_Exchange_Daily_Digest__c/fields/DI_Subscribe_for_daily_digest__c.field-meta.xml
<CustomField>
    <fullName>DI_Subscribe_for_daily_digest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If user subscribed for daily digest of DI Idea exchange, than checkbox will be true else it will be false.</description>
    <label>Subscribe for daily digest</label>
    <type>Checkbox</type>
</CustomField>