force-app/main/default/objects/DI_Idea_Exchange_Daily_Digest__c/fields/DI_User__c.field-meta.xml
<CustomField>
    <fullName>DI_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User for which Idea Exchange Daily Digest enabling and disabling.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Idea_Exchange_Daily_Digests</relationshipName>
    <type>Lookup</type>
</CustomField>